@@ -66,6 +66,19 @@ operator|.
 name|PositionIncrementAttribute
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|IOUtils
+import|;
+end_import
 begin_comment
 comment|/**  * Holds state for inverting all occurrences of a single  * field in the document.  This class doesn't do anything  * itself; instead, it forwards the tokens produced by  * analysis to its own consumer  * (InvertedDocConsumerPerField).  It also interacts with an  * endConsumer (InvertedDocEndConsumerPerField).  */
 end_comment
@@ -356,6 +369,11 @@ operator|.
 name|reset
 argument_list|()
 expr_stmt|;
+name|boolean
+name|success2
+init|=
+literal|false
+decl_stmt|;
 try|try
 block|{
 name|boolean
@@ -434,6 +452,46 @@ operator|.
 name|getPositionIncrement
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|posIncr
+operator|<
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"position increment must be>=0 (got "
+operator|+
+name|posIncr
+operator|+
+literal|")"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|fieldState
+operator|.
+name|position
+operator|==
+literal|0
+operator|&&
+name|posIncr
+operator|==
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"first position increment must be> 0 (got 0)"
+argument_list|)
+throw|;
+block|}
 name|int
 name|position
 init|=
@@ -450,6 +508,8 @@ operator|>
 literal|0
 condition|)
 block|{
+comment|// NOTE: confusing: this "mirrors" the
+comment|// position++ we do below
 name|position
 operator|--
 expr_stmt|;
@@ -569,14 +629,35 @@ operator|.
 name|endOffset
 argument_list|()
 expr_stmt|;
+name|success2
+operator|=
+literal|true
+expr_stmt|;
 block|}
 finally|finally
+block|{
+if|if
+condition|(
+operator|!
+name|success2
+condition|)
+block|{
+name|IOUtils
+operator|.
+name|closeWhileHandlingException
+argument_list|(
+name|stream
+argument_list|)
+expr_stmt|;
+block|}
+else|else
 block|{
 name|stream
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 name|fieldState
 operator|.
