@@ -6206,6 +6206,8 @@ name|tokens
 argument_list|)
 argument_list|)
 expr_stmt|;
+try|try
+block|{
 name|w
 operator|.
 name|addDocument
@@ -6213,212 +6215,21 @@ argument_list|(
 name|doc
 argument_list|)
 expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iea
+parameter_list|)
+block|{
+comment|// expected
+block|}
 name|w
-operator|.
-name|commit
-argument_list|()
-expr_stmt|;
-name|IndexReader
-name|r
-init|=
-name|DirectoryReader
-operator|.
-name|open
-argument_list|(
-name|dir
-argument_list|)
-decl_stmt|;
-name|IndexSearcher
-name|s
-init|=
-operator|new
-name|IndexSearcher
-argument_list|(
-name|r
-argument_list|)
-decl_stmt|;
-name|PhraseQuery
-name|pq
-init|=
-operator|new
-name|PhraseQuery
-argument_list|()
-decl_stmt|;
-name|pq
-operator|.
-name|add
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"a"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|pq
-operator|.
-name|add
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"b"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|pq
-operator|.
-name|add
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"c"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|ScoreDoc
-index|[]
-name|hits
-init|=
-name|s
-operator|.
-name|search
-argument_list|(
-name|pq
-argument_list|,
-literal|null
-argument_list|,
-literal|1000
-argument_list|)
-operator|.
-name|scoreDocs
-decl_stmt|;
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|hits
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|Query
-name|q
-init|=
-operator|new
-name|SpanTermQuery
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"a"
-argument_list|)
-argument_list|)
-decl_stmt|;
-name|hits
-operator|=
-name|s
-operator|.
-name|search
-argument_list|(
-name|q
-argument_list|,
-literal|null
-argument_list|,
-literal|1000
-argument_list|)
-operator|.
-name|scoreDocs
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|hits
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|DocsAndPositionsEnum
-name|tps
-init|=
-name|MultiFields
-operator|.
-name|getTermPositionsEnum
-argument_list|(
-name|s
-operator|.
-name|getIndexReader
-argument_list|()
-argument_list|,
-name|MultiFields
-operator|.
-name|getLiveDocs
-argument_list|(
-name|s
-operator|.
-name|getIndexReader
-argument_list|()
-argument_list|)
-argument_list|,
-literal|"field"
-argument_list|,
-operator|new
-name|BytesRef
-argument_list|(
-literal|"a"
-argument_list|)
-argument_list|,
-literal|false
-argument_list|)
-decl_stmt|;
-name|assertTrue
-argument_list|(
-name|tps
-operator|.
-name|nextDoc
-argument_list|()
-operator|!=
-name|DocIdSetIterator
-operator|.
-name|NO_MORE_DOCS
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|tps
-operator|.
-name|freq
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-name|tps
-operator|.
-name|nextPosition
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|w
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|r
 operator|.
 name|close
 argument_list|()
